# riddle

./: pyproject.toml  run.sh
.github/workflows/: deploy-page.yaml
src/: conf.py  index.rst
src/_ext/: bible_ref.py  bible_ref_parser.py
src/_static/schedlang-0.1/: main.bc.js  styles.css
src/articles/boolean-config-languages-under-100-lines-of-code/: index.rst
src/articles/composable-neovim-configs-with-nix/: index.rst
src/articles/ephesians-2-study/: index.rst
src/articles/gui-to-tui/: index.rst
src/articles/making-a-db-with-ocaml/: index.rst
src/articles/making-memes-with-typst/: index.rst
src/articles/neovim-ruby-clone/: index.rst
src/articles/nvim-music-player/: index.rst
src/articles/ocaml-expect-tests-in-nvim/: index.rst
src/articles/parsing-bible-references-with-python/: index.rst
src/articles/phillipians-2-part-2/: index.rst
src/articles/putting-agency-back-in-my-design-process/: index.rst  search-space-example.excalidraw
src/articles/rails-8-sshkit-sqlite-backups/: index.rst
tools/: code_snippet.py
