[project]
name = "riddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ablog>=0.11.12",
    "parsy>=2.2",
    "pillow>=12.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "pygments>=2.19.2",
    "sphinx>=8.2.3",
    "sphinxcontrib-youtube>=1.4.1",
]
